# groupcast

./: .gitignore  README.md  pyproject.toml
groupcast/: transforms.py  utils.py
groupcast/datasets/: __init__.py  base_dataset.py  base_multi_agent_dataset.py  base_single_agent_dataset.py  mock_single_agent_dataset.py
groupcast/models/: __init__.py  base_forecaster.py
groupcast/models/forecasters/: __init__.py  mlp_forecaster.py
tests/: test_mlp_forecaster.py
