[tool.poetry]
name = "groupcast"
version = "0.1.0"
description = ""
authors = ["Atom Scott <atom.james.scott@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lightning = "^2.0.9.post0"
einops = "^0.7.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.292"
black = "^23.9.1"
pytest = "^7.4.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
